Gpencil: Geometry nodes instance on points with GP crash on last keyframe delete #125866
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#125866
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.32
Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-03 09:19, hash:
e6178be3b855
Worked: (newest version of Blender that worked as expected)
Short description of error
If GPv3 is used as a Points input in instance on points, Blender will crash when last frame is deleted
Exact steps for others to reproduce the error
Delete keyframe in attached file
Looks pretty complex for me...
What I can see is that the custom data layer will have a null
anonymous_id_
which I have no idea what's causing it...Prefer if crashes are always High priority
It seems the
bke::Instances
data is actually null after deleting the keyframe (the component exists but the internal pointer is null). The same happens if i just move the keyframe instead of deleting it. This data should be created in advance, not sure what is going on.The issue is that the code assumes a valid
InstancesComponent
pointer when it transfers attributes from layers to instances.But
geometry_set.get_instances_for_write()
can return a nullptr even if the component exists (which is ensured by the code above).This is because the
GeometrySet::get_component_ptr
function checksGeometrySet::has(type)
which in turn checks bothcomponent.has_value()
andcomponent->is_empty()
:So the fix is to simply check if the instance component "exists" before accessing it:
The
is_empty
check here does not make sense to me (but probably has to stay because it's everywhere now). Getting a pointer to the instances geometry should not be contingent on the component having an actual instance (IMO). I guess we just have to live with that.